hw11-sharding/k8s/postgres-category-1.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-category-1
  labels:
    app: postgres-category-1
spec:
  type: NodePort
  ports:
   - port: 6432
  selector:
    app: postgres-category-1

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-category-1-statefulset
spec:
  serviceName: "postgres-category-1"
  replicas: 1
  selector:
    matchLabels:
      app: postgres-category-1
  template:
    metadata:
      labels:
        app: postgres-category-1
    spec:
      containers:
      - name: postgres-category-1
        image: postgres:latest
        ports:
        - containerPort: 5432
          name: postgredb-category-2
        volumeMounts:
        - name: postgredb-category-2
          mountPath: /var/lib/postgresql/data
          subPath: postgres-category-1
  volumeClaimTemplates:
  - metadata:
      name: postgredb-category-2
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: standard
      resources:
        requests:
          storage: 1Gi
