hw11-sharding/k8s/postgres-category-2.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-2
  labels:
    app: postgres-2
spec:
  type: NodePort
  ports:
   - port: 5432
  selector:
    app: postgres-2

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-statefulset-2
spec:
  serviceName: "postgres-2"
  replicas: 1
  selector:
    matchLabels:
      app: postgres-2
  template:
    metadata:
      labels:
        app: postgres-2
    spec:
      containers:
      - name: postgres-1
        image: postgres:latest
        ports:
        - containerPort: 5432
          name: postgredb-2
        volumeMounts:
        - name: postgredb-2
          mountPath: /var/lib/postgresql/data
          subPath: postgres-2
  volumeClaimTemplates:
  - metadata:
      name: postgredb-2
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: standard
      resources:
        requests:
          storage: 1Gi
